# erp_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  check_users.py  fix_dept.py  fix_metrics.py  fix_ref.py  fix_remaining.py  fix_selectinload.py  fix_update.py  pyproject.toml  test.js  test_api.js  test_auth_req.py  test_db_fee_heads.py  test_db_fee_heads2.py  test_fee.py  test_fetch_fee_heads.py  test_fetch_fee_heads3.py  test_filters.py  test_pydantic.py  test_qb.py  test_qb2.py  test_qb3.py  test_req.py  test_routes.py  verify_department_assignment.py  verify_model_relationships.py
scratch/: check_config.py  check_schema.py  debug_companies.py  fix_schema.py
src/: alembic.ini  alembic_setup.sh  audit_screens.py  check_db.py  check_screens.py  debug_leads.py  main.py  test_db.py  test_routes.py
src/alembic/: env.py
src/alembic/versions/: 011d614e2802_add_department_id_and_course_id_fields_.py  0c7084aeb2a0_update_demand_batch_schema.py  0d429be0c15f_add_vehicle_charge_to_material_in.py  0ee2223e893a_add_department_change_requests_table.py  20260222_add_fee_structure_lock_fields.py  20260222_add_missing_admission_statuses.py  20260222_add_post_admission_fields.py  20260222_adm_gate_out.py  20260222_merge_fee_lock_and_vs_case_heads.py  20260416_defaults.py  (+63 more)
src/apps/: __init__.py
src/components/: middleware.py  minio.py  settings.py
src/core/: config.py  database.py  dependencies.py  logging.py  security.py
src/infrastructure/: __init__.py
src/logs/: logging.py
src/scratch/: check_person_type.py  check_schema.py  check_visitor_db.py
tests/: test.py
(+157 files in other folders)
