[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "sqlalchemy-utils (>=0.42.0,<0.43.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "pyclean (>=3.1.0,<4.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "autoflake (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "fastapi-querybuilder (>=0.1.12,<0.2.0)",
    "minio (>=7.2.18,<8.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
